feat: 채팅방 목록 조회에 페이지네이션 적용
전체 방을 무조건 다 조회하던 GET /api/rooms를 page/size 쿼리 파라미터 기반으로 전환.
아무도 안 읽던 total/totalPages 필드는 COUNT 쿼리 없는 Slice로 바꾸며 함께 제거.
파라미터 생략 시 기존과 동일하게 동작(page=0, size=30 기본값)해 프론트/e2e 수정 불필요.